--- a/.github/workflows/reusable-deploy.yml
+++ b/.github/workflows/reusable-deploy.yml
@@ -13,13 +13,13 @@ jobs:
         uses: docker/login-action@v2
 
         with:
-          ${{ secrets.username: DOCKER_USERNAME }}
-          ${{ secrets.password: DOCKER_PASSWORD }}
+          ${{ secrets.DOCKER_USERNAME }}
+          ${{ secrets.DOCKER_PASSWORD }}
 
       - name: build and run
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tag: SoumyaNadiger/main.py:latest
+          tags: SoumyaNadiger/main.py:latest
 
