reusable deploy file expression is fixed by addding extra space

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,9 @@ jobs:
     needs: build
 
     uses: ./.github/workflows/reusable-deploy.yml
+    secrets:
+      ${{ docker.username: secrets.DOCKER.USERNMAE }}
+      ${{ docker.password: secrets.DOCKER.PASSWORD }}
   
 
 
