--- a/.github/workflows/reusable-deploy.yml
+++ b/.github/workflows/reusable-deploy.yml
@@ -2,7 +2,11 @@ name: deploy-file
 
 on:
   workflow_call:
-
+    secrets:
+      DOCKER_USERNAME:
+        required: true
+      DOCKER_PASSWORD:
+        required: true
 jobs:
   docker-deploy:
     runs-on: ubuntu-latest
