--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Install dependencies
         run: pip install -r requirements.txt
+        working-directory: ${{ github.workspace }}
 
       - name: Run tests
         run: pytest
+        working-directory: ${{ github.workspace }}
