--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -14,9 +14,13 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          cd $GITHUB_WORKSPACE
+          pip install -r requirements.txt
         working-directory: ${{ github.workspace }}
 
       - name: Run tests
-        run: pytest
+        run: |
+          cd $GITHUB_WORKSPACE
+          pytest
         working-directory: ${{ github.workspace }}
