--- a/.github/workflows/reusable-deploy.yml
+++ b/.github/workflows/reusable-deploy.yml
@@ -17,8 +17,8 @@ jobs:
         uses: docker/login-action@v2
 
         with:
-          ${{ secrets.DOCKER_USERNAME }}
-          ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: build and run
         uses: docker/build-push-action@v2
