--- a/.github/workflows/reusable-deploy.yml
+++ b/.github/workflows/reusable-deploy.yml
@@ -25,5 +25,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: soumyanadiger/main-py:latest
+          tags: SoumyaNadiger/main-py:latest
 
